--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Dorothy Delong</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
