--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
     <head>
+        <!-- META -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Dorothy Delong</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <!-- CSS-->
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <!-- FONTS -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Roboto:wght@400;700&display=swap" rel="stylesheet">     
@@ -12,44 +15,51 @@
         crossorigin="anonymous">
     </head>
     <body>
+        <!-- HEADER -->
         <header>
             <section id="home">
-                <a href="#header"><img src="img/logo.png" alt="Logo" /></a>
+                <a href="#home"><img src="img/logo.png" alt="Logo" /></a>
                 <h1>Dorothy Delong</h1>
                 <p>I capture the realism behind feminism, no filter.</p>
-                <ul><li><a href="#about">About |</a></li>
-                <li><a href="#work">Work |</a></li>
-                <li><a href="#contact">Contact</a></li></ul>
+                <nav><ul><li><a href="#home"></a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact">Contact</a></li></ul></nav>
             </section>
         </header>
         <main>
+            <!-- ABOUT -->
             <section id="about">
                 <h2>About</h2>
                 <img src="img/dorothy.jpg" alt="Dorothy headshot" />
                 <p>My work focuses on candid photographs taken on location at events for women's rights, places where women are owning their space, and 
                 fleeting encounters on the streets. My work engulfs the viewer in real moments of strength, vulnerability, and solidarity.</p>
                 </section>
+                <!-- WORK -->
             <section id="work">
                 <div class="photos"><h2>Work</h2>
-                <img src="img/moment.jpg" alt="Moment" /><p class="cap">FemRock Fest, Austin Texas - July 17, 2018</p>
-                <img src="img/father.jpg" alt="Father" /><p class="cap">Father, Denver Colorado - June 25, 2018</p>
-                <img src="img/smile.jpg" alt="Smile" /><p class="cap">Smile, San Francisco - August 4, 2018</p>
-                <img src="img/haircut.jpg" alt="Haircut" /><p class="cap">Haircut, New York City - March 31, 2018</p>
-                <img src="img/flex.jpg" alt="Flex" /><p class="cap">Flex. Madison, WI. July 24, 2015</p>
-                <img src="img/black-girl-magic.jpg" alt="Black Girl Magic" />
-                <p class="cap">Black Girl Magic. Houston, TX. January 16, 2016</p></div>
-        </section>
+                <p class="cap"><img src="img/moment.jpg" alt="Moment" />FemRock Fest, Austin Texas - July 17, 2018</p>
+                <p class="cap"><img src="img/father.jpg" alt="Father" />Father, Denver Colorado - June 25, 2018</p>
+                <p class="cap"><img src="img/smile.jpg" alt="Smile" />Smile, San Francisco - August 4, 2018</p>
+                <p class="cap"><img src="img/haircut.jpg" alt="Haircut" />Haircut, New York City - March 31, 2018</p>
+                <p class="cap"><img src="img/flex.jpg" alt="Flex" />Flex. Madison, WI. July 24, 2015</p>
+                <p class="cap"><img src="img/black-girl-magic.jpg" alt="Black Girl Magic" />Black Girl Magic. Houston, TX. January 16, 2016</p></div>
+            </section>
         </main>
+        <!-- FOOTER -->
         <footer>
             <section id="contact">
+                <div class="info">
                 <h2>Contact:</h2>
-                <p>Dorothy Delong</p>
-                <p>d.delong@gmail.com</p>
+                <p>Dorothy Delong<br>
+                d.delong@gmail.com</p></div>
+                <div class="social">
                 <h2>Connect with me:</h2>
                 <ul><li><a href="#facebook"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="#instagram"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="#twitter"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#flickr"><i class="fab fa-flickr"></i></a></li></ul>
+                <li><a href="#flickr"><i class="fab fa-flickr"></i></a></li>
+                </ul></div>
             </section>
         </footer>
     </body>
